--- a/cubemx/cmake/stm32cubemx/CMakeLists.txt
+++ b/cubemx/cmake/stm32cubemx/CMakeLists.txt
@@ -28,6 +28,7 @@ target_sources(stm32cubemx INTERFACE
     ../../Core/Src/gpio.c
     ../../Core/Src/freertos.c
     ../../Core/Src/i2c.c
+    ../../Core/Src/tim.c
     ../../Core/Src/usart.c
     ../../Core/Src/stm32l4xx_it.c
     ../../Core/Src/stm32l4xx_hal_msp.c
