--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/handle_manager"]
 	path = submodules/handle_manager
 	url = git@github.com:FranciszekJanicki/handle_manager.git
+[submodule "submodules/pid_regulator"]
+	path = submodules/pid_regulator
+	url = git@github.com:FranciszekJanicki/pid_regulator.git
