--- a/components/termo/CMakeLists.txt
+++ b/components/termo/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(common)
 add_subdirectory(display_task)
 add_subdirectory(control_task)
 add_subdirectory(system_task)
+add_subdirectory(packet_task)
 
 add_library(termo STATIC)
 
@@ -18,6 +19,7 @@ target_link_libraries(termo PUBLIC
     control_task
     display_task
     system_task
+    packet_task
 )
 
 target_compile_options(termo PUBLIC
