--- a/components/termo/CMakeLists.txt
+++ b/components/termo/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(common)
 add_subdirectory(display_task)
-add_subdirectory(control_task)
+add_subdirectory(termo_task)
 add_subdirectory(system_task)
 add_subdirectory(packet_task)
 
@@ -16,7 +16,7 @@ target_include_directories(termo PUBLIC
 
 target_link_libraries(termo PUBLIC
     common
-    control_task
+    termo_task
     display_task
     system_task
     packet_task
